Fix block list collapsing bug
Firefox (and I think Edge, too) handles percentage-based padding and
margin with flex items differently than other browsers.

This commit moves towards using a psuedo-element to create the intrinsic
ratio, instead.

--- a/source/assets/stylesheets/patterns/_block-list.scss
+++ b/source/assets/stylesheets/patterns/_block-list.scss
@@ -4,9 +4,13 @@
 }
 
 .p-block-list__item {
-  @include padding(null 0.75rem);
   flex: 1 1 auto;
-  height: 0;
-  padding-top: 25%;
   width: 50%;
+
+  &::before {
+    @include padding(50% 0.75rem null);
+    content: "";
+    display: block;
+    height: 0;
+  }
 }
